# netvisor

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  README.md  build.sh  db.session.sql  docker-compose.daemon.yml  docker-compose.dev.yml  docker-compose.yml  install.sh  netfrog.toml  netvisor.toml  netzoot.toml  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: funding.yml  test-fixtures.yml
.github/workflows/: daemon-ci.yml  release.yml  server-ci.yml  ui-ci.yml
backend/: .gitignore  Cargo.toml  Dockerfile  Dockerfile.daemon  Dockerfile.dev  rust-toolchain.toml
backend/migrations/: 20251006215000_users.sql  20251006215100_networks.sql  20251006215151_create_hosts.sql  20251006215155_create_subnets.sql  20251006215201_create_groups.sql  20251006215204_create_daemons.sql  20251006215212_create_services.sql  20251006215357_add_new_column_to_hosts.sql  20251007002805_add_source_column_to_hosts_table.sql
backend/src/: lib.rs
backend/src/daemon/: mod.rs
backend/src/server/: config.rs  mod.rs
backend/src/tests/: daemon-config.json  daemon_config.json  database.rs  mod.rs  netvisor-next.sql  netvisor.db  netvisor.sql
backend/tests/: integration.rs
images/: host_customization.mov
server/: Cargo.toml  Dockerfile.daemon  Dockerfile.dev  LICENSE.md  docker-compose.yml  install.sh
server/src/: mod.rs
server/src/daemon/: mod.rs
server/src/daemon/discovery/: handlers.rs  manager.rs  mod.rs
server/src/daemon/discovery/service/: base.rs  mod.rs  network.rs  self_report.rs
server/src/daemon/discovery/types/: base.rs
server/src/daemon/runtime/: handlers.rs  mod.rs  service.rs  types.rs
server/src/daemon/shared/: mod.rs  services.rs  storage.rs
server/src/daemon/utils/: base.rs  linux.rs  macos.rs  mod.rs  udp.rs  windows.rs
server/src/server/: config.rs
server/src/server/daemons/: handlers.rs  mod.rs  service.rs  storage.rs
server/src/server/daemons/types/: api.rs  base.rs
server/src/server/discovery/: handlers.rs  manager.rs  mod.rs
server/src/server/discovery/types/: api.rs
server/src/server/groups/: handlers.rs  service.rs  storage.rs  types.rs
server/src/server/hosts/: handlers.rs  mod.rs  service.rs  storage.rs
server/src/server/hosts/types/: base.rs  interfaces.rs  mod.rs  ports.rs  targets.rs
server/src/server/services/: handlers.rs  mod.rs  service.rs  storage.rs
server/src/server/services/definitions/: access_point.rs  adguard_home.rs  bind9.rs  client.rs  cloudflared.rs  cups.rs  custom.rs  dhcp_server.rs  dns_server.rs  docker_swarm.rs  duplicati.rs  eero_gateway.rs  eero_repeater.rs  emby.rs  example.rs  file_server.rs  fios_extender.rs  fios_gateway.rs  firewall.rs  fortigate.rs  grafana.rs  home_assistant.rs  hp_printer.rs  jellyfin.rs  kubernetes.rs  mod.rs  nas_device.rs  netvisor_daemon.rs  netvisor_server.rs  next_cloud.rs  nginx_proxy_manager.rs  open_media_vault.rs  opn_sense.rs  pf_blocker_ng.rs  pf_sense.rs  philips_hue_bridge.rs  pi_hole.rs  plex.rs  portainer.rs  power_dns.rs  (+21 more)
server/src/server/services/types/: base.rs  categories.rs  definitions.rs  endpoints.rs  mod.rs  patterns.rs  types.rs
server/src/server/shared/: constants.rs  handlers.rs  mod.rs  services.rs
server/src/server/shared/storage/: migrations.rs  mod.rs  seed_data.rs
server/src/server/shared/types/: api.rs  metadata.rs  mod.rs  storage.rs
server/src/server/subnets/: handlers.rs  mod.rs  service.rs  storage.rs
server/src/server/subnets/types/: base.rs
server/src/server/topology/: handlers.rs  mod.rs  service.rs
server/src/server/topology/service/: edges.rs  main.rs  mod.rs  nodes.rs  utils.rs
server/src/server/topology/types/: base.rs  edges.rs  mod.rs  nodes.rs
server/src/server/utils/: base.rs
src/: app.css  app.html  config.rs  handlers.rs  lib.rs  main.rs  mod.rs  storage.rs  types.rs
src/api/: errors.rs  mod.rs  requests.rs  responses.rs
src/components/: mod.rs
src/components/adhoc/: types.rs
src/components/diagnostics/: handlers.rs  service.rs  storage.rs  types.rs
src/components/discovery/: handlers.rs  mod.rs  types.rs
src/components/monitoring/: types.rs
src/components/node_groups/: handlers.rs  mod.rs  service.rs  storage.rs  types.rs
src/components/nodes/: handlers.rs  mod.rs  service.rs  storage.rs  types.rs
src/components/tests/: execution.rs  field_factory.rs  handlers.rs  mod.rs  service.rs  storage.rs  types.rs
src/components/topology/: types.rs
src/core/: mod.rs  node_types.rs  test_types.rs  types.rs
src/daemon/: handlers.rs  mod.rs  service.rs  storage.rs
src/daemon/daemon/: handlers.rs  mod.rs  service.rs  storage.rs
src/daemon/discovery/: handlers.rs  manager.rs  mod.rs  service.rs  utils.rs
src/daemon/runtime/: handlers.rs  mod.rs  service.rs  types.rs
src/daemon/shared/: handlers.rs  services.rs  storage.rs
src/daemon/subnets/: service.rs
src/daemon/tests/: handlers.rs  mod.rs  service.rs
src/daemon/types/: base.rs
src/daemon/utils/: base.rs  linux.rs  macos.rs  mod.rs  udp.rs  windows.rs
src/lib/: api-client.ts  tauri-commands.ts
src/lib/api/: client.ts  registry.ts
src/lib/components/: Header.svelte  Modal.svelte  Notifications.svelte  Sidebar.svelte
src/lib/stores/: checks.ts  node-groups.ts  nodes.ts  schema.ts  tests.ts  topologies.ts  ui.ts
src/lib/types/: diagnostics.ts  index.ts  node-groups.ts  nodes.ts  tests.ts
src/lib/utils/: polling.ts
src/network_checks/: analysis.rs  basic.rs  cdn.rs  dns.rs  email.rs  local.rs  mod.rs  performance.rs  security.rs  services.rs  utils.rs  vpn.rs
src/routes/: +page.svelte
src/server/: config.rs  mod.rs
src/shared/: domain.rs  handlers.rs  metadata.rs  mod.rs  repository.rs  schema.rs  service.rs  storage.rs  types.rs  utils.rs
src/tests/: daemon_config.json  netvisor.db
ui/: .dockerignore  .gitignore  Dockerfile  LICENSE.md  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
ui/src/: app.css  app.html
(+802 files in other folders)
