[package]
name = "netfrog-server"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for NetFrog network diagnostics"

[dependencies]
# Web server
axum = "0.7.9"
tower = "0.4.13" 
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"

# Database
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
snmp2 = "0.4.8"

# TLS and security
rustls = "0.21"
webpki-roots = "0.25"
x509-parser = "0.15"

# Configuration and logging
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and assets
clap = { version = "4.0", features = ["derive"] }
rust-embed = "8.0"
mime_guess = "2.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"
