[package]
name = "netvisor-server"
version = "0.1.0"
edition = "2021"
description = "HTTP API server for NetVisor network diagnostics"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "netvisor"
path = "src/lib.rs"

[dependencies]
# Web server
axum = "0.7.9"
tower = "0.4.13" 
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"

# Database
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
snmp2 = "0.4.8"

# TLS and security
rustls = "0.21"
webpki-roots = "0.25"
x509-parser = "0.15"

# Configuration and logging
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and assets
clap = { version = "4.0", features = ["derive"] }
rust-embed = "8.0"
mime_guess = "2.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"
strum = "0.27.2"
strum_macros = "0.27.2"
cidr = { version = "0.3.1", features = ["serde"] }
serde_repr = "0.1.20"
if-addrs = "0.14.0"
hostname = "0.4.1"
async-fs = "2.1.3"
dirs = "6.0.0"
num_enum = "0.7.4"
local-ip-address = "0.6.5"
get_if_addrs = "0.5.3"
surge-ping = "0.8.2"
mac_address = "1.1.8"
directories-next = "2.0.0"
figment = { version = "0.10", features = ["json", "env"] }
tokio-util = "0.7.16"
fastrand = "2.3.0"
