[package]
name = "netvisor-server"
version = "0.1.0"
edition = "2021"
description = "NetVisor HTTP API server"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "netvisor"
path = "src/lib.rs"

[dependencies]
# Web server
axum = "0.7.9"
tower = "0.4.13" 
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"

# Database
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# Networking
reqwest = { version = "0.11", features = ["json", "stream"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
snmp2 = { version = "0.4.8", features = ["tokio"] }

# TLS and security
rustls = "0.21"
webpki-roots = "0.25"
x509-parser = "0.15"

# Configuration and logging
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI and assets
clap = { version = "4.0", features = ["derive"] }
rust-embed = "8.0"
mime_guess = "2.0"

# Async utilities
async-trait = "0.1"
futures = "0.3"
strum = "0.27.2"
strum_macros = "0.27.2"
cidr = { version = "0.3.1", features = ["serde"] }
serde_repr = "0.1.20"
if-addrs = "0.14.0"
hostname = "0.4.1"
async-fs = "2.1.3"
dirs = "6.0.0"
num_enum = "0.7.4"
local-ip-address = "0.6.5"
get_if_addrs = "0.5.3"
surge-ping = "0.8.2"
mac_address = { version = "1.1.8", features = ["serde"] }
directories-next = "2.0.0"
figment = { version = "0.10", features = ["json", "env"] }
tokio-util = "0.7.16"
fastrand = "2.3.0"
url = "2.5.7"
url-builder = "0.1.1"
dns-lookup = "3.0.0"
unzip3 = "1.0.0"
network-interface = "2.0.3"
getifaddrs = "0.5.0"
pnet = "0.35.0"
rsntp = "4.0.0"
dhcproto = "0.13.0"
rand = "0.9.2"
mac_oui = { version = "0.4.11", features = ["with-db"] }
petgraph = { version = "0.8.2", features = ["serde-1"] }
petgraph-graphml = "5.0.0"
itertools = "0.14.0"

# Linux/Unix dependencies  
[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.16"

# Windows dependencies
[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation"
]}
