[package]
name = "netvisor-server"
version = "0.1.0"
edition = "2021"
description = "NetVisor HTTP API server"

[[bin]]
name = "daemon"
path = "src/bin/daemon.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[lib]
name = "netvisor"
path = "src/lib.rs"

# Release profile optimizations for smaller, faster binaries
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization  
codegen-units = 1   # Better optimization, slower compile
panic = "abort"     # Smaller binaries, no unwinding
strip = true        # Remove debug symbols

# Development profile for faster builds
[profile.dev]
opt-level = 0       # No optimization for faster builds
debug = true        # Keep debug symbols for debugging
lto = false         # No LTO for faster builds
incremental = true  # Enable incremental compilation

# Dependencies grouped by purpose for better maintainability
[dependencies]
# === Web Server Framework ===
axum = "0.7.9"
tower = "0.4.13" 
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "fs", "signal", "process"] }

# === Database ===
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }

# === Serialization ===
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# === Core Utilities ===
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

# === Networking ===
reqwest = { version = "0.11", features = ["json", "stream"] }
trust-dns-resolver = { version = "0.23", features = ["tokio-runtime"] }
snmp2 = { version = "0.4.8", features = ["tokio"] }
pnet = "0.35.0"
cidr = { version = "0.3.1", features = ["serde"] }
if-addrs = "0.14.0"
dns-lookup = "3.0.0"

# === Network Protocol Support ===
rsntp = "4.0.0"
dhcproto = "0.13.0"

# === TLS and Security ===
rustls = "0.21"
webpki-roots = "0.25"
base64ct = "=1.6.0"

# === Configuration and Logging ===
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
figment = { version = "0.10", features = ["json", "env"] }

# === CLI ===
clap = { version = "4.0", features = ["derive"] }

# === File and MIME handling ===
mime_guess = "2.0"
async-fs = "2.1.3"

# === Async utilities ===
async-trait = "0.1"
futures = "0.3"
tokio-util = "0.7.16"

# === System Information ===
hostname = "0.4.1"
local-ip-address = "0.6.5"
mac_address = { version = "1.1.8", features = ["serde"] }
mac_oui = { version = "0.4.11", features = ["with-db"] }
directories-next = "2.0.0"

# === Data Structures and Algorithms ===
petgraph = { version = "0.8.2", features = ["serde-1"] }
itertools = "0.14.0"

# === Code Generation and Macros ===
strum = "0.27.2"
strum_macros = "0.27.2"
inventory = "0.3.21"

# === Utilities ===
fastrand = "2.3.0"
url = "2.5.7"
rand = "0.9.2"
blob-uuid = "0.5.0"

# === Dynamic Types Support ===
dyn-clone = "1.0.20"
dyn-hash = "0.2.2"
dyn-eq = "0.1.3"
ipgen = "1.0.2"

# === Platform-specific Dependencies ===
[target.'cfg(target_os = "linux")'.dependencies]
procfs = { version = "0.16" }

[target.'cfg(target_family = "windows")'.dependencies]
windows = { version = "0.52", features = [
    "Win32_NetworkManagement_IpHelper",
    "Win32_Foundation"
]}
